--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,3 @@
+raw-car-par-1.mp4 filter=lfs diff=lfs merge=lfs -text
 *.mp4 filter=lfs diff=lfs merge=lfs -text
 *.pt filter=lfs diff=lfs merge=lfs -text
